Bug 279911 - Bluedevil crashed after completing a file transfer
Summary: Bluedevil crashed after completing a file transfer
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
: 291188 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-11 16:16 UTC by Diego
Modified: 2012-04-26 22:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.32 KB, text/plain)
2011-11-02 16:04 UTC, Diego
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Diego 2011-08-11 16:16:49 UTC
Application: bluedevil-helper (0.1)
KDE Platform Version: 4.6.5 (4.6.5)
Qt Version: 4.7.3
Operating System: Linux 2.6.40-4.fc15.x86_64 x86_64
Distribution: "Fedora release 15 (Lovelock)"

-- Information about the crash:
- What I was doing when the application crashed:

Bluedevil just completed receving a file when it crashed with the following backtrace.

-- Backtrace:
Application: Programma di supporto per la ricezione di file via Bluetooth (bluedevil-helper), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#6  OpenObex::ServerSession::slotJobFinished (this=0xf115ffff00000001) at /usr/src/debug/bluedevil-1.1/src/daemon/helpers/filereceiver/openobex/serversession.cpp:169
#7  0x000000000040d16f in OpenObex::FileTransferJob::slotTransferCompleted (this=0xd80cc0) at /usr/src/debug/bluedevil-1.1/src/daemon/helpers/filereceiver/openobex/filetransferjob.cpp:160
#8  0x000000000040688c in OpenObex::FileTransferJob::qt_metacall (this=0xd80cc0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7ffffedd6960) at /usr/src/debug/bluedevil-1.1/x86_64-redhat-linux-gnu/src/daemon/helpers/filereceiver/moc_filetransferjob.cpp:88
#9  0x00007ff578cebeba in QMetaObject::activate (sender=0xd36b50, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3278
#10 0x000000000040e900 in OrgOpenobexServerSessionInterface::qt_metacall (this=0xd36b50, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7ffffedd6c90) at /usr/src/debug/bluedevil-1.1/x86_64-redhat-linux-gnu/src/daemon/helpers/filereceiver/server_session_interface.moc:100
#11 0x00007ff5790285fb in QDBusConnectionPrivate::deliverCall (this=0xd21e80, object=0xd36b50, msg=..., metaTypes=..., slotIdx=9) at qdbusintegrator.cpp:941
#12 0x00007ff579031d8f in QDBusCallDeliveryEvent::placeMetaCall (this=<optimized out>, object=<optimized out>) at qdbusintegrator_p.h:103
#13 0x00007ff578cefa7a in QObject::event (this=0xd36b50, e=<optimized out>) at kernel/qobject.cpp:1217
#14 0x00007ff579907444 in notify_helper (e=0xe61bc0, receiver=0xd36b50, this=0xc95eb0) at kernel/qapplication.cpp:4462
#15 QApplicationPrivate::notify_helper (this=0xc95eb0, receiver=0xd36b50, e=0xe61bc0) at kernel/qapplication.cpp:4434
#16 0x00007ff57990c2d1 in QApplication::notify (this=0x7ffffedd76c0, receiver=0xd36b50, e=0xe61bc0) at kernel/qapplication.cpp:4341
#17 0x00007ff57b00ad56 in KApplication::notify (this=0x7ffffedd76c0, receiver=0xd36b50, event=0xe61bc0) at /usr/src/debug/kdelibs-4.6.5/kdeui/kernel/kapplication.cpp:311
#18 0x00007ff578cd91ac in QCoreApplication::notifyInternal (this=0x7ffffedd76c0, receiver=0xd36b50, event=0xe61bc0) at kernel/qcoreapplication.cpp:731
#19 0x00007ff578cdc774 in sendEvent (event=0xe61bc0, receiver=0xd36b50) at kernel/qcoreapplication.h:215
#20 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0xc77310) at kernel/qcoreapplication.cpp:1372
#21 0x00007ff578d038b3 in sendPostedEvents () at kernel/qcoreapplication.h:220
#22 postEventSourceDispatch (s=0xc9a660) at kernel/qeventdispatcher_glib.cpp:277
#23 0x00007ff573d097ed in g_main_dispatch (context=0xc998e0) at gmain.c:2441
#24 g_main_context_dispatch (context=0xc998e0) at gmain.c:3014
#25 0x00007ff573d09fc8 in g_main_context_iterate (context=0xc998e0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3092
#26 0x00007ff573d0a25c in g_main_context_iteration (context=0xc998e0, may_block=1) at gmain.c:3155
#27 0x00007ff578d03d0f in QEventDispatcherGlib::processEvents (this=0xc78a00, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#28 0x00007ff5799a9fde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#29 0x00007ff578cd86c2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007ff578cd88bf in QEventLoop::exec (this=0x7ffffedd7650, flags=...) at kernel/qeventloop.cpp:201
#31 0x00007ff578cdca07 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#32 0x0000000000406609 in main (argc=1, argv=0x7ffffedd7938) at /usr/src/debug/bluedevil-1.1/src/daemon/helpers/filereceiver/main.cpp:46

Reported using DrKonqi
Comment 1 Alex Fiestas 2011-10-07 20:52:33 UTC
This bug should be fixed in any version greater than 1.0.5.

If you can still reproduce this bug, please don't hesitate to reopen it !

Thanks for reporting.
Comment 2 Diego 2011-11-02 16:04:56 UTC
Created attachment 65163 [details]
New crash information added by DrKonqi

bluedevil-helper (0.1) on KDE Platform 4.6.5 (4.6.5) using Qt 4.7.4

Maybe you meant another version, I can reproduce with bluedevil 1.1.1

$ rpm -q bluedevil
bluedevil-1.1.1-1.fc15.x86_64

$ rpm -q libbluedevil
libbluedevil-1.9-0.1.20110502git.fc15.x86_64

-- Backtrace (Reduced):
#6  OpenObex::ServerSession::slotJobFinished (this=0x3a3ab33300000001) at /usr/src/debug/bluedevil-1.1.1/src/daemon/helpers/filereceiver/openobex/serversession.cpp:169
#7  0x000000000040d16f in OpenObex::FileTransferJob::slotTransferCompleted (this=0x13e7960) at /usr/src/debug/bluedevil-1.1.1/src/daemon/helpers/filereceiver/openobex/filetransferjob.cpp:160
#8  0x000000000040688c in OpenObex::FileTransferJob::qt_metacall (this=0x13e7960, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffc46da4f0) at /usr/src/debug/bluedevil-1.1.1/x86_64-redhat-linux-gnu/src/daemon/helpers/filereceiver/moc_filetransferjob.cpp:88
[...]
#10 0x000000000040e900 in OrgOpenobexServerSessionInterface::qt_metacall (this=0x140d430, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffc46da820) at /usr/src/debug/bluedevil-1.1.1/x86_64-redhat-linux-gnu/src/daemon/helpers/filereceiver/server_session_interface.moc:100
#11 0x00007f101d72173b in QDBusConnectionPrivate::deliverCall (this=0x13dd0d0, object=0x140d430, msg=..., metaTypes=..., slotIdx=9) at qdbusintegrator.cpp:942
Comment 3 Alex Fiestas 2012-04-26 02:41:18 UTC
*** Bug 291188 has been marked as a duplicate of this bug. ***
Comment 4 Alex Fiestas 2012-04-26 22:44:08 UTC
Git commit 0ffccae9e54bca8bcfb6be28903c29ed809c06e1 by Alex Fiestas.
Committed on 27/04/2012 at 00:39.
Pushed by afiestas into branch '1.0'.

This job should be async to do not run into race conditions.

M  +1    -1    src/daemon/helpers/filereceiver/openobex/filetransferjob.cpp

http://commits.kde.org/bluedevil/0ffccae9e54bca8bcfb6be28903c29ed809c06e1
Comment 5 Alex Fiestas 2012-04-26 22:44:48 UTC
Git commit c10cc68b3c5709bcbd372241054c07d99240fa6a by Alex Fiestas.
Committed on 27/04/2012 at 00:39.
Pushed by afiestas into branch '1.1'.

This job should be async to do not run into race conditions.
(cherry picked from commit 0ffccae9e54bca8bcfb6be28903c29ed809c06e1)

M  +1    -1    src/daemon/helpers/filereceiver/openobex/filetransferjob.cpp

http://commits.kde.org/bluedevil/c10cc68b3c5709bcbd372241054c07d99240fa6a