This job should be async to do not run into race conditions.

BUG:279911